[workspace]
members = ["ym-core", "ym-sfx", "ym-song"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
ym2149 = "0.9.1"
ym2149-ym-replayer = "0.9.1"
ym2149-common = "0.9.1"
cpal = "0.18.0"
indicatif = "0.18.6"
console = "0.16.4"